Bug 262288 - GraphicsContext InterpolationQuality::Default is misleading name
Summary: GraphicsContext InterpolationQuality::Default is misleading name
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-28 01:30 PDT by Kimmo Kinnunen
Modified: 2023-10-02 02:22 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2023-09-28 01:30:28 PDT
GraphicsContext InterpolationQuality::Default is misleading name
Comment 1 Radar WebKit Bug Importer 2023-09-28 01:31:00 PDT
<rdar://problem/116169474>
Comment 2 Kimmo Kinnunen 2023-09-28 02:24:07 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18334
Comment 3 EWS 2023-10-02 02:22:23 PDT
Committed 268720@main (a54c64ccb14b): <https://commits.webkit.org/268720@main>

Reviewed commits have been landed. Closing PR #18334 and removing active labels.