GraphicsContext InterpolationQuality::Default is misleading name, add documentation https://bugs.webkit.org/show_bug.cgi?id=262288 rdar://116169474

Reviewed by Antti Koivisto.

Add a FIXME documentation what InterpolationQuality::Default means and
why it should be removed.
Remove the FIXME question in CanvasBase asking what is the InterpolationQuality::Default.

Remove few uses of
GraphicsContext::setImageInterpolationQuality(InterpolationQuality::Default)
where a newly created context obviously tries to use the default quality.
The default quality should be the quality set to a newly created context
by default.

Change a call to GraphicsContext::setImageInterpolationQuality(InterpolationQuality::High)
to use ImagePaintingOptions { InterpolationQuality::High }. This conveys
the idea better, limit the quality setting to that particular draw.
This leaves the setImageInterpolationQuality call-sites to cases
where the intention is to leave the state on indefinitively.

* Source/WebCore/html/CanvasBase.cpp:
* Source/WebCore/platform/graphics/GraphicsTypes.h:
* Source/WebCore/platform/graphics/cocoa/IconCocoa.mm:
(WebCore::Icon::paint):
* Source/WebCore/platform/graphics/texmap/BitmapTexture.cpp:
(WebCore::BitmapTexture::updateContents):
* Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::imageBuffer const):

Canonical link: https://commits.webkit.org/268720@main